--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body>
-        <h2>Welcome to my webpage! commit -ma</h2>
+        <h2>Welcome to my webpage! commit -am</h2>
         Hello, world! One Commit! Does this work?
     </body>
 </html>
