--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,16 @@
         <title>
             Hello!
         </title>
+        <style>
+            h2 {
+            color:blue;
+
+            }
+        </style>
     </head>
     <body>
         <h1>h1</h1>
-        <h2 style="color:blue;">Welcome to my webpage!1 commit -am</h2>
+        <h2>Welcome to my webpage!1 commit -am</h2>
         Hello, world! One Commit! Does this work?
     </body>
 </html>
