--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>h1</h1>
-        <h2 style="color:blue;">Welcome to my webpage!1 commit -am</h2>
+        <h2 style="color:blue;">Welcome to my webpage commit -am</h2>
         Hello, world! One Commit! Does this work?
     </body>
 </html>
